Backend3/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: dbope-service-service
  namespace: backend-services
spec:
  selector:
    app: dbope-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
