Backend3/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dbope-service-ing
  namespace: backend-services
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:650089658128:certificate/038015c7-d29a-4891-84dc-25f8493b7529
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/group.name: "shared-alb"
spec:
  ingressClassName: alb
  rules:
  - host: backend3.captianjack.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dbope-service-service
            port:
              number: 80
